# image-hash-spoofer

./: .gitignore  CMakeLists.txt  README.md
src/: spoof.c  spoof.h
tests/: test_spoof.c
workflows/: build.yml
